# microservicos-ai-orchestrator

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  RESUMO_SESSAO_2026-07-06.md  RETOMADA.md  docker-compose.e2e.yml  docker-compose.prod.yml  pytest.ini
.claude/: settings.json
.github/: compose-ci.yml
.github/workflows/: ci.yml
SDD/: ARCHITECTURE.md  BACKLOG_PROGRAMA.md  DEFERRED_SPECS.md  NEXT_PHASES.md  README.md  RETRO.md  SPEC_TEMPLATE.md  STATUS_EXECUTIVO.md
SDD/specs/: spec-svc-guardrails.md  spec-svc-inference.md  spec-svc-observability.md  spec-svc-orchestrator.md  spec-svc-rag.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  OBSERVABILITY.md  RUNBOOK.md  SLA.md
e2e/: smoke.sh
graphify-out/: .graphify_ast.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_detect.json  .graphify_python  .graphify_root  .graphify_uncached.txt
graphify-out/cache/: stat-index.json
observability/prometheus/: prometheus.yml  rules.yml
scripts/: backup.sh  dr_test.sh  loadtest.py  restore.sh  smoke.sh
svc-evals/: .env.example  BACKLOG.md  DECISIONS.md  Dockerfile  Makefile  README.md  SPEC.md  compose.yaml  pyproject.toml
svc-evals/api/: openapi.yaml
svc-evals/evals/: bench_latency.py  eval_engine.py  eval_judge.py  eval_scorers.py
svc-evals/tests/: conftest.py  test_contract.py  test_gate.py  test_jsonpath.py  test_judge.py  test_results_store.py  test_runner.py  test_scorers.py  test_security.py
svc-guardrails/: .dockerignore  .env.example  .gitignore  BACKLOG.md  DECISIONS.md  Dockerfile  Makefile  README.md  SPEC.md  compose.yaml  pyproject.toml
svc-guardrails/api/: openapi.yaml
svc-guardrails/evals/: bench_latency.py  eval_injection.py  eval_ood.py
svc-guardrails/evals/data/: injection_adversarial.jsonl  injection_benign.jsonl  ood_in_domain.jsonl  ood_out.jsonl
svc-guardrails/src/guardrails/: app.py  config.py  injection.py  ood.py  otel.py  patterns_pt.py  sanitize.py  schemas.py  security.py
svc-guardrails/tests/: conftest.py  test_contract.py  test_injection.py  test_ood.py  test_sanitize.py  test_security.py
svc-inference/: .env.example  .gitignore  BACKLOG.md  DECISIONS.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
svc-observability/: .dockerignore  .env.example  BACKLOG.md  DECISIONS.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
svc-orchestrator/: .env.example  BACKLOG.md  DECISIONS.md  Dockerfile  Makefile  README.md  SPEC.md  compose.yaml  pyproject.toml
svc-orchestrator/api/: openapi.yaml
svc-orchestrator/evals/: bench_latency.py  eval_flow.py  eval_hitl.py  eval_sse.py
svc-orchestrator/src/orch_svc/: app.py  circuit.py  clients.py  config.py  orchestrator.py  otel.py  schemas.py  security.py  write_intent.py
svc-orchestrator/tests/: conftest.py  test_app.py  test_circuit.py  test_contract.py  test_orchestrator.py  test_security.py  test_smoke_ecosystem.py  test_write_intent.py
svc-rag/: .env.example  BACKLOG.md  DECISIONS.md  Dockerfile  Makefile  README.md  SPEC.md  compose.yaml  pyproject.toml
svc-router/: .env.example  .gitignore  BACKLOG.md  DECISIONS.md  Dockerfile  Makefile  README.md  SPEC.md  compose.yaml  pyproject.toml
svc-router/api/: openapi.yaml
svc-router/evals/: bench_latency.py  eval_fusion.py  eval_guards.py  eval_routing.py
svc-router/evals/data/: golden_routing.jsonl
svc-router/src/router_svc/: app.py  bm25.py  config.py  embedder.py  guards.py  llm.py  otel.py  router.py  routes.py  schemas.py  security.py
svc-router/tests/: conftest.py  test_app.py  test_bm25.py  test_contract.py  test_embedder.py  test_guards.py  test_llm.py  test_router.py  test_security.py
(+96 files in other folders)
