[project]
name = "svc-guardrails"
version = "1.0.0"
description = "Análise de segurança de texto para sistemas LLM: sanitização + prompt injection + OOD guard (resíduo de subespaço)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "openapi-spec-validator>=0.7",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "evals"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = ["S101"]  # assert em testes

[tool.ruff.lint.per-file-ignores]
# Testes/evals: tokens de teste hardcoded (S105/6) e linhas longas de assert/print
# são intencionais e legíveis; código-fonte (src/) mantém E501 estrito em 100.
"tests/*" = ["S105", "S106", "E501"]
"evals/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
